add google analytics tag

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <!-- Google tag (gtag.js) -->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QM7N8R0GC0"></script>
-     <script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C9CM4LE8GJ"></script>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'G-QM7N8R0GC0');
+    
+      gtag('config', 'G-C9CM4LE8GJ');
     </script>
     <meta name="msvalidate.01" content="6D5465A7B911D6B8DBFDE7621EE2EA26" />
     <script src="./js/product_name_id_map.js"></script>
