--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head> 
   <body>
     <script>
-            window.location.href = "https://shreejiittar.mini.store";
+            // window.location.href = "https://shreejiittar.mini.store";
             // //window.location.href ="https://smartbiz.in/shreejiittar";
     </script>
     <img src="./images/logo.png" alt="Image not available" class="center" width="250" height="250"></img>
