add dynamic titel and new index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-C9CM4LE8GJ"></script>
@@ -9,54 +10,100 @@
     
       gtag('config', 'G-C9CM4LE8GJ');
     </script>
-    <meta name="msvalidate.01" content="6D5465A7B911D6B8DBFDE7621EE2EA26" />
-    <script src="./js/product_name_id_map.js"></script>
-    <script src="./js/page_navigation.js"></script>
-    <title>Welcome to Shree Ji skin-friendly ittar</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-    <meta name="msvalidate.01" content="55125CBE22A367F8B1DCF74F128F8160" />
-
-    <meta charset="UTF-8">
-
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reviews - Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"/>
+    <meta name="og:title" content="Reviews - Shree Ji Ittar & Perfume">  
+    <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
     <meta name="author" content="Lalita Mahajan">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="shreejiittar.in: Find your perfect ittar/attar & perfume fragrances at delightful prices">
-    <meta name="keywords" content="ittars,itra,attar, aromatherapy, homemade, skin-friendly, natural, temple, worship, affordable, online, India, Khargone, shreeji">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow">
 
-
-    <meta property="og:title" content="Shreejiittar.in: Original, Skin-Friendly Ittar" />
-    <meta property="og:description" content="shreejiittar.in: Find your perfect ittar/attar & perfume fragrances at delightful prices" />
-    <meta property="og:image" content="https://www.shreejiittar.in/images/logo.png" />
-    <meta property="og:site_name" content="Shreejiittar.in" />
-    <meta property="og:url" content="https://www.shreejiittar.in/" />
-    <meta property="og:type" content="website" />
-
-
-    <style>
-     .center {
-       display: block;
-       margin-left: auto;
-       margin-right: auto;
-     }
-     footer {
-       background-color: #eee;
-       padding: 20px;
-       text-align: center;
-     }
-    </style>
-  </head> 
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="css/product_page.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <script src="./js/product_page_js.js"></script>
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
   <body>
-    <script>
-            // window.location.href = "https://shreejiittar.mini.store";
-            // //window.location.href ="https://smartbiz.in/shreejiittar";
-    </script>
-    <img src="./images/logo.png" alt="Image not available" class="center" width="250" height="250"></img>
-    <a href="https://shreejiittar.mini.store"><h1 align="center">Way to our online store ... <h1></a>
+    <!-- Banner -->
+      <div id="banner-content" class="banner" align="center">
+        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
+      </div>
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="row">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text"><a id="my_heading" href="https://shreejiittar.mini.store/" target="_blank" >SHREE JI ITTAR & PERFUME</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- End Top Bar -->
+    <br>
+    <br>
+    <div class="row">
 
-    <footer align="center">
-            <p>&copy; 2024 Shreejiittar.in</p>
-    </footer>
+
+      <div class="jumbotron bg-garnet">
+        <div class="blockquote-quotes">
+          <h2 class="text-center"><strong>Natural and Skin friendly</strong></h2>
+          <img src="./images/logo.png" width="10%"></img>
+          <p class="text-center">Check our collection now.<br>
+          &ndash; Shree Ji Ittar</p>
+        </div>
+      </div>
+
+    </div>
+    <br/>
+    <div class="callout large secondary">
+      <div class="row">
+        <div class="large-6 columns mycontent">
+          <h4>We specialize in crafting devotional fragrances..</h4>
+          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
+          <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
+          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
+
+        </div>
+        <div class="large-4 columns">
+          <ul class="menu">
+            <hr/>
+            <h4>Get in touch..</h4>
+            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row column">
+      <hr>
+      <ul class="menu">
+        <li class="float-right">Copyright &copy; Shree Ji Ittar
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+          </li>
+      </ul>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src="./js/product_name_id_map.js"></script>
+    <script>
+      $(document).foundation();
+      productUrlMap.forEach(function(item){
+       if (window.location.href.endsWith(item.name)){
+        document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
+        }
+       })
+    </script>
   </body>
 </html>
