enable redirection again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
     <meta name="author" content="Lalita Mahajan">
-
+    <script src="./js/product_name_id_map.js"></script>
+    <script src="./js/page_navigation.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
@@ -96,7 +97,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src="./js/product_name_id_map.js"></script>
+    
     <script>
       $(document).foundation();
       productUrlMap.forEach(function(item){
