--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reviews - Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"/>
-    <meta name="og:title" content="Reviews - Shree Ji Ittar & Perfume">  
-    <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
+    <title>Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"/>
+    <meta name="og:title" content="Shree Ji Ittar & Perfume">  
+    <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
     <meta name="author" content="Lalita Mahajan">
     <script src="./js/product_name_id_map.js"></script>
@@ -24,8 +24,6 @@
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script src="./js/product_page_js.js"></script>
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -55,9 +53,12 @@
 
       <div class="jumbotron bg-garnet">
         <div class="blockquote-quotes">
-          <h2 class="text-center"><strong>Natural and Skin friendly</strong></h2>
-          <img src="./images/logo.png" width="10%"></img>
-          <p class="text-center">Check our collection now.<br>
+          <h2 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h2>
+          <!-- <img src="./images/logo.png" width="10%"></img> -->
+           <hr/>
+          <img src="./images/website_header.jpg" width="100%"/>
+          <hr/>
+          <p class="text-center"><a href="shreejiittar.mini.store">Checkout our collection now.</a><br>
           &ndash; Shree Ji Ittar</p>
         </div>
       </div>
@@ -97,7 +98,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    
+    <script src="./js/index_page.js"></script>
     <script>
       $(document).foundation();
       productUrlMap.forEach(function(item){
