--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            <hr/>
           <img src="./images/website_header.jpg" width="100%"/>
           <hr/>
-          <p class="text-center"><a href="shreejiittar.mini.store">Checkout our collection now.</a><br>
+          <p class="text-center"><a href="https://shreejiittar.mini.store/">Checkout our collection now.</a><br>
           &ndash; Shree Ji Ittar</p>
         </div>
       </div>
