add share button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"/>
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
-    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
     <meta name="author" content="Lalita Mahajan">
     <script src="./js/product_name_id_map.js"></script>
     <script src="./js/page_navigation.js"></script>
@@ -58,8 +58,8 @@
            <hr/>
           <img src="./images/website_header.jpg" width="100%"/>
           <hr/>
-          <p class="text-center"><a href="https://shreejiittar.mini.store/">Checkout our collection now.</a><br>
-          &ndash; Shree Ji Ittar</p>
+          <!-- <p class="text-center"><a href="https://shreejiittar.mini.store/"><b>Checkout our collection now.</b></a><br> -->
+            <a id="buy_button" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
         </div>
       </div>
 
@@ -68,7 +68,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h4>We specialize in crafting devotional fragrances..</h4>
+          <h3>We specialize in crafting devotional fragrances..</h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
@@ -83,13 +83,15 @@
             <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
             <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
           </ul>
+          <br>
+          &ndash; Shree Ji Ittar</p>
         </div>
       </div>
     </div>
     <div class="row column">
       <hr>
       <ul class="menu">
-        <li class="float-right">Copyright &copy; Shree Ji Ittar
+        <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
