--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"/>
     <meta name="og:title" content="Natural & Devotional fragrance | Pocket Perfumes | Shree Ji Ittar">  
     <meta name="og:description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"> 
-    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
     <meta name="author" content="Lalita Mahajan">
 
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
@@ -74,11 +74,26 @@
         </table>
         <br>
         <a id="buy_button" class="hollow button large expanded">Buy on <img src="./images/minis_logo.png" width="20%"></a>
-        <hr/>
-        <div class="small secondary expanded button-group">
-            <a class="button" href="./reviews.html">Check our recent Google reviews</a>
-            <a class="button" href="./image_gallery.html">Image Gallery</a>
-          </div>
+        <br/>
+        <!-- AddToAny BEGIN -->
+          <div id="shareBtn" class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="Shree Ji Ittar &amp; Perfume">
+            <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+            <a class="a2a_button_copy_link"></a>
+            <a class="a2a_button_email"></a>
+            <a class="a2a_button_facebook_messenger"></a>
+            <a class="a2a_button_whatsapp"></a>
+            </div>
+            <script>
+            var a2a_config = a2a_config || {};
+            a2a_config.num_services = 4;
+            </script>
+            <script async src="https://static.addtoany.com/menu/page.js"></script>
+            <!-- AddToAny END -->
+            <hr/>
+            <div class="small secondary expanded button-group">
+                <a class="button" href="./reviews.html">Google reviews</a>
+                <a class="button" href="./image_gallery.html">Image Gallery</a>
+            </div>
         </div>
     </div>
     <div class="column row">
@@ -108,7 +123,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h4>We specialize in crafting <b>devotional</b> fragrances..</h4>
+          <h3>We specialize in crafting <b>devotional</b> fragrances..</h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
@@ -123,13 +138,16 @@
             <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8"></a></li>
             <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537"></a></li>
           </ul>
+          <br>
+          &ndash; Shree Ji Ittar</p>
         </div>
       </div>
     </div>
     <div class="row column">
+
       <hr>
       <ul class="menu">
-        <li class="float-right">Copyright &copy; Shree Ji Ittar
+        <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
