fix the checkout link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="./images/website_header.jpg" width="100%"/>
           <hr/>
           <!-- <p class="text-center"><a href="https://shreejiittar.mini.store/"><b>Checkout our collection now.</b></a><br> -->
-            <a id="buy_button" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
+            <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
         </div>
       </div>
 
@@ -68,7 +68,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h3>We specialize in crafting devotional fragrances..</h3>
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
