--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"/>
+    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional purpose"/>
     <meta name="og:title" content="Shree Ji Ittar & Perfume">  
     <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
     <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
@@ -36,7 +36,10 @@
       <div class="row">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text"><a id="my_heading" href="https://shreejiittar.mini.store/" target="_blank" >SHREE JI ITTAR & PERFUME</a></li>
+            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./image_gallery.html">Images</a></li>
+            <li><a href="./about_us.html">About us</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
@@ -58,7 +61,6 @@
            <hr/>
           <img src="./images/website_header.jpg" width="100%"/>
           <hr/>
-          <!-- <p class="text-center"><a href="https://shreejiittar.mini.store/"><b>Checkout our collection now.</b></a><br> -->
             <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
         </div>
       </div>
