--- a/product.html
+++ b/product.html
@@ -37,7 +37,10 @@
       <div class="row">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text"><a id="my_heading" href="https://shreejiittar.mini.store/">SHREE JI ITTAR & PERFUME</a></li>
+            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./image_gallery.html">Images</a></li>
+            <li><a href="./about_us.html">About us</a></li>
           </ul>
         </div>
         <div class="top-bar-right">
