fix about us page and footer

--- a/about_us.html
+++ b/about_us.html
@@ -60,7 +60,7 @@
       <div id="about_us">
         <div>
           <h2 align="center" id="box_heading">What Inspire Us</h2>
-          <p align="right" id="box_titel">Listen🔊 in :- <span id="speak_in_hindi"><u> Hindi</u>, </span>  <span id="speak_in_english"><u>English</u></span></p>
+          <p align="right" id="box_titel" class="blink_me"><b>Listen</b>🔊 in :- <span id="speak_in_hindi"><u> Hindi</u>, </span>  <span id="speak_in_english"><u>English</u></span></p>
         </div>
         
         <hr>
@@ -101,7 +101,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
