--- a/reviews.html
+++ b/reviews.html
@@ -58,7 +58,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
