--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="author" content="Lalita Mahajan">
     <script src="./js/product_name_id_map.js"></script>
     <script src="./js/page_navigation.js"></script>
+    <script src="./js/load_header_footer.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
@@ -27,33 +28,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <!-- Banner -->
-      <div id="banner-content" class="banner" align="center">
-        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
-      </div>
-    <!-- Start Top Bar -->
-    <div class="top-bar">
-      <div class="row">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
-            <li><a href="./reviews.html">Reviews</a></li>
-            <li><a href="./image_gallery.html">Images</a></li>
-            <li><a href="./about_us.html">About us</a></li>
-          </ul>
-        </div>
-        <div class="top-bar-right">
-          <ul class="menu">
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- End Top Bar -->
-    <br>
+    <div id="header"></div>
     <br>
     <div class="row">
-
-
       <div class="jumbotron bg-garnet">
         <div class="blockquote-quotes">
           <h2 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h2>
@@ -70,7 +47,7 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
-          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
