--- a/product.html
+++ b/product.html
@@ -25,32 +25,11 @@
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="./js/product_page_js.js"></script>
+    <script src="./js/load_header_footer.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <!-- Banner -->
-      <div id="banner-content" class="banner" align="center">
-        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
-      </div>
-    <!-- Start Top  -->
-    <div class="top-bar">
-      <div class="row">
-        <div class="top-bar-left">
-          <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
-            <li><a href="./reviews.html">Reviews</a></li>
-            <li><a href="./image_gallery.html">Images</a></li>
-            <li><a href="./about_us.html">About us</a></li>
-          </ul>
-        </div>
-        <div class="top-bar-right">
-          <ul class="menu">
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- End Top Bar -->
-    <br>
+    <div id="header"></div>
     <br>
     <div class="row">
       <div class="medium-6 columns">
@@ -122,41 +101,7 @@
         </div>
       </div>
     </div>
-<br/>
-    <div class="callout large secondary">
-      <div class="row">
-        <div class="large-6 columns mycontent">
-          <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
-          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
-          <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
-          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
-
-        </div>
-        <div class="large-4 columns">
-          <ul class="menu">
-            <hr/>
-            <h4>Get in touch..</h4>
-            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537"></a></li>
-          </ul>
-          <br>
-          &ndash; Shree Ji Ittar</p>
-        </div>
-      </div>
-    </div>
-    <div class="row column">
-
-      <hr>
-      <ul class="menu">
-        <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
-            <script type="text/javascript">
-              document.write(new Date().getFullYear());
-            </script>
-          </li>
-      </ul>
-    </div>
+    <div id="footer"></div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src="./js/product_name_id_map.js"></script>
