--- a/index.html
+++ b/index.html
@@ -1,58 +1,4 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C9CM4LE8GJ"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-C9CM4LE8GJ');
-    </script>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional purpose"/>
-    <meta name="og:title" content="Shree Ji Ittar & Perfume">  
-    <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
-    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
-    <meta name="author" content="Lalita Mahajan">
-    <script src="./js/product_name_id_map.js"></script>
-    <script src="./js/page_navigation.js"></script>
-    <script src="./js/load_header_footer.js"></script>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
-    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-    <link rel="stylesheet" href="css/product_page.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <div id="header"></div>
-    <br>
-    <div class="row">
-      <div class="jumbotron bg-garnet">
-        <div class="blockquote-quotes">
-          <h2 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h2>
-          <!-- <img src="./images/logo.png" width="10%"></img> -->
-           <hr/>
-          <img src="./images/website_header.jpg" width="100%"/>
-          <hr/>
-            <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
-        </div>
-      </div>
-    </div>
-    <div id="footer"></div>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src="./js/index_page.js"></script>
-    <script>
-      $(document).foundation();
-      productUrlMap.forEach(function(item){
-       if (window.location.href.endsWith(item.name)){
-        document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
-        }
-       })
-    </script>
+<html><body>
+  Maintaiance
   </body>
-</html>
+  </html>
