--- a/index.html
+++ b/index.html
@@ -1,4 +1,115 @@
-<html><body>
-  maintenance
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C9CM4LE8GJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-C9CM4LE8GJ');
+    </script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional purpose"/>
+    <meta name="og:title" content="Shree Ji Ittar & Perfume">  
+    <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
+    <meta name="author" content="Lalita Mahajan">
+    <script src="./js/product_name_id_map.js"></script>
+    <script src="./js/page_navigation.js"></script>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="css/product_page.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
+  <body>
+    <!-- Banner -->
+      <div id="banner-content" class="banner" align="center">
+        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
+      </div>
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="row">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./image_gallery.html">Images</a></li>
+            <li><a href="./about_us.html">About us</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- End Top Bar -->
+    <br>
+    <br>
+    <div class="row">
+
+
+      <div class="jumbotron bg-garnet">
+        <div class="blockquote-quotes">
+          <h2 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h2>
+          <!-- <img src="./images/logo.png" width="10%"></img> -->
+           <hr/>
+          <img src="./images/website_header.jpg" width="100%"/>
+          <hr/>
+            <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
+        </div>
+      </div>
+
+    </div>
+    <br/>
+    <div class="callout large secondary">
+      <div class="row">
+        <div class="large-6 columns mycontent">
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
+          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
+          <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
+          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
+
+        </div>
+        <div class="large-4 columns">
+          <ul class="menu">
+            <hr/>
+            <h4>Get in touch..</h4>
+            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
+          </ul>
+          <br>
+          &ndash; Shree Ji Ittar</p>
+        </div>
+      </div>
+    </div>
+    <div class="row column">
+      <hr>
+      <ul class="menu">
+        <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+          </li>
+      </ul>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script src="./js/index_page.js"></script>
+    <script>
+      $(document).foundation();
+      productUrlMap.forEach(function(item){
+       if (window.location.href.endsWith(item.name)){
+        document.getElementById('buy_button').href = "https://shreejiittar.mini.store/products/"+item.id;
+        }
+       })
+    </script>
   </body>
-  </html>
+</html>
