--- a/about_us.html
+++ b/about_us.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <script src="./js/about_us.js"></script>
-    <script src="./js/load_header_footer.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -33,13 +32,35 @@
 
   </head>
   <body>
-    <div id="header"></div>
+    <!-- Banner -->
+      <div id="banner-content" class="banner" align="center">
+        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
+      </div>
+    <!-- Start Top Bar -->
+    <div class="top-bar">
+      <div class="row">
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR & PERFUME</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./image_gallery.html">Images</a></li>
+            <li><a href="./about_us.html">About us</a></li>
+          </ul>
+        </div>
+        <div class="top-bar-right">
+          <ul class="menu">
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- End Top Bar -->
+    <br>
     <br>
     <div class="row"> 
       <div id="about_us">
         <div>
           <h2 align="center" id="box_heading">What Inspire Us</h2>
-          <p align="right" id="box_titel" class="blink_me"><b>Listen</b>🔊 in :- <span id="speak_in_hindi"><u> Hindi</u>, </span>  <span id="speak_in_english"><u>English</u></span></p>
+          <p align="right" id="box_titel">Listen🔊 in :- <span id="speak_in_hindi"><u> Hindi</u>, </span>  <span id="speak_in_english"><u>English</u></span></p>
         </div>
         
         <hr>
@@ -76,7 +97,39 @@
     </div>
 
     <br/>
-    <div id="footer"></div>
+    <br/>
+    <div class="callout large secondary">
+      <div class="row">
+        <div class="large-6 columns mycontent">
+          <h3><b>We specialize in crafting <u>devotional</u> fragrances..<b></h3>
+          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
+          <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
+          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
+
+        </div>
+        <div class="large-4 columns">
+          <ul class="menu">
+            <hr/>
+            <h4>Get in touch..</h4>
+            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
+            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row column">
+      <hr>
+      <ul class="menu">
+        <li class="float-right">Copyright &copy; Shree Ji Ittar
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+          </li>
+      </ul>
+    </div>
+
 
 
     <!-- <div class="reveal" id="animatedModal10" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
