--- a/index.html
+++ b/index.html
@@ -32,21 +32,15 @@
         🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
       </div>
     <!-- Start Top Bar -->
-    <div class="top-bar">
-      <div class="row">
+    <div class="top-bar" id="responsive-menu">
         <div class="top-bar-left">
           <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text"><a id="my_heading" href="./index.html">SHREE JI ITTAR</a></li>
-            <li><a href="./reviews.html">Reviews</a></li>
-            <li><a href="./image_gallery.html">Images</a></li>
-            <li><a href="./about_us.html">About</a></li>
+            <li id="focused"><a href="./index.html">Home</a></li>
+            <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
+            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
+            <li id="nav_element"><a href="./about_us.html">About</a></li>
           </ul>
         </div>
-        <div class="top-bar-right">
-          <ul class="menu">
-          </ul>
-        </div>
-      </div>
     </div>
     <!-- End Top Bar -->
     <br>
