--- a/image_gallery.html
+++ b/image_gallery.html
@@ -29,7 +29,7 @@
   <body>
     <!-- Banner -->
       <div id="banner-content" class="banner" align="center">
-        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. Shop our entire <a href=https://shreejiittar.mini.store>collection</a> now!
+        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. shop our <a href=https://shreejiittar.mini.store>collection</a> now!
       </div>
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
