update products and delivery info

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <!-- Banner -->
       <div id="banner-content" class="banner" align="center">
-        🚀 Enjoy free home delivery across <b>India</b> on orders above ₹399. shop our <a href=https://shreejiittar.mini.store>collection</a> now!
+        🚀 Enjoy free home delivery across <b>India</b>. shop our <a href=https://shreejiittar.mini.store>collection</a> now!
       </div>
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="large-6 columns mycontent">
           <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
-          <div>- <u>Free</u> home delivery across India on order > <b>₹399</b></div>
+          <div>- <u>Free</u> home delivery across India</div>
           <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
 
