add redirection in index.html

--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
     <div class="top-bar" id="responsive-menu">
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li id="nav_element"><a href="./index.html">Home</a></li>
+          <li id="nav_element"><a href="./home.html">Home</a></li>
           <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
           <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
           <li id="nav_element"><a href="./about_us.html">About</a></li>
