--- a/home.html
+++ b/home.html
@@ -12,18 +12,18 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reviews - Shree Ji Ittar & Perfume</title>
-    <meta name="description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"/>
-    <meta name="og:title" content="Reviews - Shree Ji Ittar & Perfume">  
-    <meta name="og:description" content="Check recent google reviews of 'Shree Ji Ittar & Perfume'"> 
-    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable">
+    <title>Shree Ji Ittar & Perfume</title>
+    <meta name="description" content="Unlike Regular ittar/attar that often contain chemicals for faster skin absorption or stronger scents, we crafted  ittar meant for devotional purpose"/>
+    <meta name="og:title" content="Shree Ji Ittar & Perfume">  
+    <meta name="og:description" content="Natural and skin friendly fragrance at 'Shree Ji Ittar & Perfume'"> 
+    <meta name="keywords" content="shreeji, ittar, attar, natural, fragrance, perfume, devotional, temple, pocket-friendly, affordable, Natural Ittar, Undiluted Attar, Devotional Fragrances, Puja Essentials, Chemical-Free Fragrance, Aromatherapy Benefits, Premium Quality Attar, Affordable Luxury, Temple Offerings, Purity in Prayer, giftideas">
     <meta name="author" content="Lalita Mahajan">
-
+    <script src="./js/product_name_id_map.js"></script>
+    <script src="./js/page_navigation.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="css/product_page.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script src="./js/product_page_js.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -33,20 +33,29 @@
       </div>
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
-      <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li id="nav_element"><a href="./home.html">Home</a></li>
-          <li id="focused"><a href="./reviews.html">Reviews</a></li>
-          <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
-          <li id="nav_element"><a href="./about_us.html">About</a></li>
-        </ul>
-      </div>
+        <div class="top-bar-left">
+          <ul class="dropdown menu" data-dropdown-menu>
+            <li id="focused"><a href="./home.html">Home</a></li>
+            <li id="nav_element"><a href="./reviews.html">Reviews</a></li>
+            <li id="nav_element"><a href="./image_gallery.html">Images</a></li>
+            <li id="nav_element"><a href="./about_us.html">About</a></li>
+          </ul>
+        </div>
     </div>
     <!-- End Top Bar -->
     <br>
     <br>
     <div class="row">
-      <div class='sk-ww-google-reviews' data-embed-id='25407608'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
+      <div class="jumbotron bg-garnet">
+        <div class="blockquote-quotes">
+          <h2 class="text-center"><strong><div class="animate-text" id="headText">Natural & Skin friendly</div></strong></h2>
+          <!-- <img src="./images/logo.png" width="10%"></img> -->
+           <hr/>
+          <img src="./images/website_header.jpg" width="100%"/>
+          <hr/>
+            <a target="_blank" href="https://shreejiittar.mini.store/" class="hollow button large expanded">Checkout now <img src="./images/minis_logo.png" width="10%"></a>
+        </div>
+      </div>
     </div>
     <br/>
     <div class="callout large secondary">
@@ -67,13 +76,15 @@
             <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
             <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
           </ul>
+          <br>
+          &ndash; Shree Ji Ittar</p>
         </div>
       </div>
     </div>
     <div class="row column">
       <hr>
       <ul class="menu">
-        <li class="float-right">Copyright &copy; Shree Ji Ittar
+        <li class="float-right"><b>Copyright</b> &copy; Shree Ji Ittar
             <script type="text/javascript">
               document.write(new Date().getFullYear());
             </script>
@@ -82,7 +93,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src="./js/product_name_id_map.js"></script>
+    <script src="./js/index_page.js"></script>
     <script>
       $(document).foundation();
       productUrlMap.forEach(function(item){
