with updated price and content

--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
   <body>
     <!-- Banner -->
       <div id="banner-content" class="banner" align="center">
-        🚀 Enjoy free home delivery across <b>India</b>. shop our <a href=https://shreejiittar.mini.store>collection</a> now!
+        <b>Ittar | Non alcoholic perfumes</b> crafted for devotional purpose
       </div>
     <!-- Start Top Bar -->
     <div class="top-bar" id="responsive-menu">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <div class="column row">
+    <!-- <div class="column row">
       <hr>
       <ul class="tabs" data-tabs id="example-tabs">
         <li class="tabs-title is-active" aria-selected="true"><a class="panel_tab" href="#panel2">Ittar catalog</a></li>
@@ -115,14 +115,14 @@
           <a href="https://shreejiittar.mini.store"  class="shop_btn button">Shop now</a>
         </div>
       </div>
-    </div>
+    </div> -->
 <br/>
     <div class="callout large secondary">
       <div class="row">
         <div class="large-6 columns mycontent">
           <h3><b>We specialize in crafting <u>devotional</u> fragrances..</b></h3>
-          <div>- <u>Free</u> home delivery across India</div>
-          <div>- Use code <u>MYFIRSTORDER</u> to get 10% off on 1st order > <b>₹259</b></div>
+          <div>- <u>Free</u> home delivery across India on order > ₹399 </div>
+          <div>- Use code <u>GRAB20</u> to get 20% off on allorders > <b>₹249</b></div>
           <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
 
         </div>
