update get in touch

--- a/about_us.html
+++ b/about_us.html
@@ -97,20 +97,21 @@
         <div class="large-6 columns mycontent">
           <h4><b>We specialize in crafting <u>devotional</u> fragrances..</b></h4>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b> </div>
-          <div>- Use code <u>GRAB20</u> to get 20% off on allorders > <b>₹249</b></div>
-          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
+          <div>- Use code <u>GRAB20</u> to get 20% off on all orders > <b>₹249</b></div>
+          <div>- Contact for bulk order</div>
+          
 
         </div>
         <div class="large-4 columns">
-          <ul class="menu">
-            <hr/>
+          <ul>
             <h4>Get in touch..</h4>
-            <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8" target="_blank"></a></li>
-            <li><a target="_blank" class="fa fa-2x fa-phone" href="tel:+919407472537" target="_blank"></a></li>
+            <hr/>
+            <h6><a target="_blank" href="tel:+919407472537">+91-94074-72537</a></h6>
+            <h6><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">108 Jain mandir path, in front of bisa neema dharamshala Khargone</a></h6>
           </ul>
+          &ndash; <a href="https://www.instagram.com/shree_ji_ittar">Shree Ji Ittar </a> </p>
         </div>
+
       </div>
     </div>
     <div class="row column">
