--- a/product.html
+++ b/product.html
@@ -124,8 +124,9 @@
         <div class="large-6 columns mycontent">
           <h4><b>We specialize in crafting <u>devotional</u> fragrances..</b></h4>
           <div>- <u>Free</u> home delivery across India on order > <b>₹399</b> </div>
-          <div>- Use code <u>GRAB20</u> to get 20% off on allorders > <b>₹249</b></div>
-          <div>- <a href="tel:+919407472537">Contact us</a> for personalised fragrance</div>
+          <div>- Use code <u>GRAB20</u> to get 20% off on all orders > <b>₹249</b></div>
+          <div>- Contact for bulk order</div>
+          
 
         </div>
         <div class="large-4 columns">
