--- a/about_us.html
+++ b/about_us.html
@@ -104,7 +104,8 @@
         </div>
         <div class="large-4 columns">
           <ul>
-            <h4>Get in touch..</h4>
+            </hr>
+            <h4><b>Get in touch..</b></h4>
             <hr/>
             <h6><a target="_blank" href="tel:+919407472537">+91-94074-72537</a></h6>
             <h6><a target="_blank" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8">108 Jain mandir path, in front of bisa neema dharamshala khargone 451001</a></h6>
