--- a/product.html
+++ b/product.html
@@ -132,7 +132,8 @@
         <div class="large-4 columns">
           <ul class="menu">
             <hr/>
-            <h4>Get in touch..</h4>
+            </hr>
+<h4><b>Get in touch..</b></h4>
             <li><a target="_blank" class="fa fa-2x fa-instagram" href="https://www.instagram.com/shree_ji_ittar/"></a></li>
             <li><a target="_blank" class="fa fa-2x fa-whatsapp" href="https://wa.me/9407472537"></a></li>
             <li><a target="_blank" class="fa fa-2x fa-location-arrow" href="https://maps.app.goo.gl/RaQUmqNd728Fkkkh8"></a></li>
