add canonical tag

--- a/product.html
+++ b/product.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Natural & Devotional fragrance | Pocket Perfumes | Shree Ji Ittar</title>
+    <link id="head_link" rel="canonical" href="https://shreejiittar.in/product.html">
     <meta name="description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"/>
     <meta name="og:title" content="Natural & Devotional fragrance | Pocket Perfumes | Shree Ji Ittar">  
     <meta name="og:description" content="Discover skin-friendly, natural ittar & devotional fragrances. Highest quality, Best for temples. Pocket-friendly & cost-effective in price. Shop on Shree Ji Ittar & Perfume!"> 
